--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,3 @@
 mountpoints:
   /:
-    url: https://author-p133911-e1313554.adobeaemcloud.com/bin/franklin.delivery/jalagari/demo/main
-    type: "markup"
-    suffix: ".html"
+    url: https://drive.google.com/drive/folders/1bvjfi6TqpYA7DvbX6kKc-m7FgHuJ4RUQ
